# embi-scheduler

./: .gitignore  CONTRIBUTING.md  README.md  commit_msg.txt
Event-driven-simulator-C++/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Dockerfile  Doxyfile.in  README.md  aggregate.py  aggregated_stats.txt  append_review.py  appendix_a_human_trace.txt  audit.py  build_canonical.py  build_simulator.ps1  clean.ps1  clean.sh  config.default.yaml  diagnostic_table.py  diagnostic_tables.md  generate_dummy_traces.py  generate_figures.py  generate_summaries.py  hybrid_noise_exp.json  implementation_plan.md  parse_hybrid.py  patch.py  phase1_dry_run.ps1  prepare_traces.ps1  prepare_traces.sh  publication_audit_report.md  run_golden_pipeline.ps1  run_hybrid_noise_experiment.ps1  run_m_sensitivity.ps1  run_new_benchmarks.ps1  run_phase3_only.ps1  run_pipeline.ps1  run_pipeline.sh  run_release_pipeline.ps1  run_reviewer_diagnostics.ps1  run_sosp_pipeline.ps1  (+5 more)
Event-driven-simulator-C++/.github/workflows/: build.yml
Event-driven-simulator-C++/commands/: 1_verify.ps1  2_benchmark.ps1  3_generate_figures.ps1  run_all.ps1
Event-driven-simulator-C++/docs/: Developer_Guide.md  Reproducibility.md  embi_simulator_complete_review.md  experimental_design.md  scheduler_architecture.md
Event-driven-simulator-C++/docs/validation/: mathematical_specification.md
Event-driven-simulator-C++/examples/: embi_poisson.yaml  exp1_symmetric.json  exp2_asymmetric.json  exp3_high_contention.json  exp4_long_hold.json  exp5_scalability.json  exp6_confidence_hybrid.json  full_sweep.json  lock_contention_sweep.json  maxweight_bursty.yaml  quick_demo.json  run_all_experiments.ps1  run_all_experiments.sh  run_lock_contention.ps1  run_lock_contention.sh  symmetric_noise_check.json
Event-driven-simulator-C++/results/embi_poisson/: summary.json  summary.txt
Event-driven-simulator-C++/results/full_sweep/: summary.json  summary.txt
Event-driven-simulator-C++/results/quick_demo/: summary.json  summary.txt
Event-driven-simulator-C++/scripts/: analyze_results.py  expanded_diagnostics.py  generate_figures.py  plot_fairness.py  sanity_checks.py
Event-driven-simulator-C++/scripts/trace/: clean_alibaba.py  generate_manifest.py
Event-driven-simulator-C++/scripts/trace_profiler/: config.py  main.py
Event-driven-simulator-C++/scripts/trace_profiler/adapters/: alibaba.py  azure.py  base_adapter.py  factory.py  google.py  pyarrow_csv_adapter.py
Event-driven-simulator-C++/scripts/trace_profiler/cache/: dataset_index.json
Event-driven-simulator-C++/scripts/trace_profiler/core/: benchmark.py  canonical_schema.py  discovery.py  manifest.py  metadata.py  optimizer.py  profiler.py  quality.py  registry.py  schema.py  semantic_mapper.py  statistics.py
Event-driven-simulator-C++/scripts/trace_profiler/output_reports/alibaba/: canonical.csv
Event-driven-simulator-C++/scripts/trace_profiler/output_reports/azure/: canonical.csv
Event-driven-simulator-C++/scripts/visualization/: compare_schedulers.py  extract_p99.py  plot_latency.py  plot_pareto_curve.py  plot_trace_results.py  plot_trace_stats.py
Event-driven-simulator-C++/src/: CLI.cpp  CLI.hpp  embi_verify.cpp  main.cpp
Event-driven-simulator-C++/src/core/: Config.cpp  Config.hpp  Event.hpp  EventLoop.cpp  EventLoop.hpp  EventQueue.cpp  EventQueue.hpp  Experiment.cpp  Experiment.hpp  GraphState.hpp  LockManager.cpp  LockManager.hpp  OfflineMetrics.cpp  OfflineMetrics.hpp  OnlineMetrics.cpp  OnlineMetrics.hpp  OracleEvaluator.cpp  OracleEvaluator.hpp  Process.cpp  Process.hpp  Results.hpp  Simulator.cpp  Simulator.hpp
Event-driven-simulator-C++/src/events/: IEventSource.hpp  SyntheticEventSource.cpp  SyntheticEventSource.hpp  TraceReplaySource.cpp  TraceReplaySource.hpp
Event-driven-simulator-C++/src/logging/: BinaryLogger.cpp  BinaryLogger.hpp  CSVLogger.cpp  CSVLogger.hpp  Logger.hpp  NullLogger.hpp  Statistics.cpp  Statistics.hpp  StatisticsDatabase.cpp  StatisticsDatabase.hpp  SummaryWriter.cpp  SummaryWriter.hpp
Event-driven-simulator-C++/src/schedulers/: BaseScheduler.cpp  BaseScheduler.hpp  CFSScheduler.cpp  CFSScheduler.hpp  CmuScheduler.cpp  CmuScheduler.hpp  Decision.hpp  EMBIAblatedScheduler.cpp  EMBIAblatedScheduler.hpp  EMBIScheduler.cpp  EMBIScheduler.hpp  FCFSScheduler.cpp  FCFSScheduler.hpp  GSQScheduler.cpp  GSQScheduler.hpp  HybridEMBIScheduler.cpp  HybridEMBIScheduler.hpp  MaxWeightScheduler.cpp  MaxWeightScheduler.hpp  RoundRobinScheduler.cpp  RoundRobinScheduler.hpp  SJFScheduler.cpp  SJFScheduler.hpp  SchedulerContext.hpp
Event-driven-simulator-C++/src/schedulers/estimators/: BaselineEMBIEstimator.cpp  BaselineEMBIEstimator.hpp  EMBIEstimator.hpp  KatzEMBIEstimator.cpp  KatzEMBIEstimator.hpp
Event-driven-simulator-C++/src/trace/: AlibabaParser.cpp  AlibabaParser.hpp  CanonicalTraceRecord.hpp  ITraceParser.hpp  ReplayEngine.cpp  ReplayEngine.hpp  TraceAnalyzer.cpp  TraceAnalyzer.hpp  TraceConfig.hpp  TraceReconstructor.cpp  TraceReconstructor.hpp  TraceStore.cpp  TraceStore.hpp  TraceValidator.cpp  TraceValidator.hpp
Event-driven-simulator-C++/src/utils/: ConfigLoader.cpp  ConfigLoader.hpp  FileUtils.cpp  FileUtils.hpp  Random.cpp  Random.hpp  Timer.hpp
Event-driven-simulator-C++/src/workloads/: BaseWorkload.hpp  BurstyWorkload.cpp  BurstyWorkload.hpp  GraphWorkload.cpp  GraphWorkload.hpp  HeavyTailWorkload.cpp  HeavyTailWorkload.hpp  LockContentionWorkload.cpp  LockContentionWorkload.hpp  PoissonWorkload.cpp  PoissonWorkload.hpp  TraceLoader.cpp  TraceLoader.hpp  UniformWorkload.cpp  UniformWorkload.hpp  WorkloadProfile.cpp  WorkloadProfile.hpp
Event-driven-simulator-C++/tests/: CMakeLists.txt  test_cli.cpp  test_config.cpp  test_config_loader.cpp  test_embi_score.cpp  test_event_queue.cpp  test_ewma.cpp  test_experiment.cpp  test_graph_correctness.cpp  test_metrics_offline.cpp  test_metrics_online.cpp  test_oracle.cpp  test_process.cpp  test_random.cpp  test_regression.cpp  test_robustness.cpp  test_schedulers.cpp  test_statistics_db.cpp  test_workloads.cpp
(+3123 files in other folders)
